Add favicon files

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Guitar Tuner App</title>
+  <title>WebTuner</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="manifest" href="/static/manifest.json" />
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png?v=Omy7oPaxyn">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png?v=Omy7oPaxyn">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png?v=Omy7oPaxyn">
+  <link rel="manifest" href="/static/favicon/site.webmanifest?v=Omy7oPaxyn">
+  <link rel="mask-icon" href="/static/favicon/safari-pinned-tab.svg?v=Omy7oPaxyn" color="#6190e8">
+  <link rel="shortcut icon" href="/static/favicon/favicon.ico?v=Omy7oPaxyn">
+  <meta name="apple-mobile-web-app-title" content="Tuner">
+  <meta name="application-name" content="Tuner">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/static/favicon/browserconfig.xml?v=Omy7oPaxyn">
+  <meta name="theme-color" content="#6190e8">
 </head>
 
 <body>
